# stargazers

./: .gitignore  Pipfile  README.md  old.pyproject.toml  pyproject.toml  requirements.txt  setup.py
scripts/: .gitignore  activate.bat  lint.bat  update_dependencies.bat  update_project.bat
src/stargazer_utils/: context.py  decorators.py  iter.py  mixins.py  timer.py
src/stargazer_utils/files/: __init__.py  json.py
src/stargazers/: __init__.py  __main__.py  context.py  decorators.py  files.py  iter.py  logging.py  mixins.py  sg_classes.py  sg_deco.py  sg_enums.py  sg_files.py  sg_logging.py  sg_timer.py  timer.py
src/stargazers/files/: __init__.py  json.py
tests/: test_file_manip.py  test_iterators.py  test_misc.py  test_others.py  test_sg_timer.py  test_str_manip.py  test_timer.py
tools/: activate.bat  lint.bat
