[project]
name = "stargazers"
version = "1.1.2"
description = "Tools to help people shoot for the stars"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Robert Ferguson"},
    {email = "stargazersllc@protonmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: File Formats :: JSON",
    "Topic :: Utilities"
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest > 8.0.0",
    "hypothesis > 6.0.0",
]

development = [
    "black > 25.0.0",
    "isort > 6.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"