[project]
name = "stargazers"
version = "1.1.3"
description = "Tools to help people shoot for the stars"
authors = [
    {name = "Robert Ferguson",email = "rmferguson@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
hypothesis = "6.131.15"
isort = "6.0.1"
black = "25.1.0"
autoflake = "2.3.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
